crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_ranking_rules_order__attribute_rank_before_words_with_tms_all-2.snap
---
source: crates/milli/src/search/new/tests/words_ranking_rules_order.rs
expression: texts
---
[
    "\"albert einstein\"",
    "\"albert abraham michelson\"",
    "\"albert schweitzer\"",
    "\"richard feynman\"",
]
