crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_ranking_rules_order__attribute_rank_before_words_with_tms_all.snap
---
source: crates/milli/src/search/new/tests/words_ranking_rules_order.rs
expression: "format!(\"{documents_ids:?}\")"
---
[0, 1, 3, 5]
