crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_ranking_rules_order__both_attribute_rank_and_word_position_before_words-2.snap
---
source: crates/milli/src/search/new/tests/words_ranking_rules_order.rs
expression: texts
---
[
    "\"albert einstein\"",
    "\"albert abraham michelson\"",
    "\"albert schweitzer\"",
    "\"richard feynman\"",
    "\"albert camus\"",
]
