crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__words_ranking_rules_order__word_position_before_words_returns_all_matches-2.snap
---
source: crates/milli/src/search/new/tests/words_ranking_rules_order.rs
expression: texts
---
[
    "\"albert einstein\"",
    "\"albert abraham michelson\"",
    "\"richard feynman\"",
    "\"albert schweitzer\"",
    "\"albert camus\"",
]
